<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/action_sort_menu">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort_1"
        android:title="@string/action_sort"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/action_sort_group" >
                <item
                    android:id="@+id/action_sort_name"
                    android:orderInCategory="1"
                    android:title="@string/action_sort_name"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_sort_score"
                    android:orderInCategory="2"
                    android:title="@string/action_sort_score"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_sort_new"
                    android:orderInCategory="3"
                    android:title="@string/action_sort_new"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_sort_old"
                    android:orderInCategory="4"
                    android:title="@string/action_sort_old"
                    app:showAsAction="never"
                    android:enabled="false" />
            </group>
        </menu>
    </item>
</menu>
