<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_categories"
        android:id="@+id/menu_categories_list">
        <menu>
            <group
                android:id="@+id/menu_categories_group_list"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/no_categories"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu__no_categories" />

            </group>
        </menu>
    </item>

    <item
        android:title="@string/menu_manage_categories"
        android:id="@+id/menu_manage_categories"
        android:icon="@drawable/ic_create_new_folder"
        app:actionViewClass="android.widget.TextView"/>
    <item
        android:title="@string/menu_settings"
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"/>

    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
