<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.AddingFragment"
    android:clickable="true"
    android:focusable="true">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/image_camera"
                android:layout_width="match_parent"
                android:layout_height="274dp"
                android:padding="16dp"
                android:src="@drawable/ic_menu_camera"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/new_name"
                    android:inputType="textCapWords|textPersonName" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:numStars="5"
                android:stepSize="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:text="@string/notes" />

                <EditText
                    android:id="@+id/editText_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:hint="@string/new_notes"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textCapSentences|textMultiLine" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_action_save"
        android:tint="@android:color/background_light"
        app:fabSize="normal"
        app:useCompatPadding="true" />

</RelativeLayout>